--- a/css/style.css
+++ b/css/style.css
@@ -682,7 +682,7 @@ p.third-about-text {
   margin-bottom: 8rem;
   padding: 1.5rem;
   gap: 2rem;
-  box-shadow: 0px 0px 0px 1px var(--color-8);
+  box-shadow: 0px 0px 0px 2px var(--color-8);
   border-radius: 10px;
 }
 
@@ -818,6 +818,7 @@ a.footer-link {
   align-items: center;
   justify-content: space-between;
   margin: 0;
+  gap: 10px;
 }
 
 .social-icon {
